--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.6.1",
     "next": "14.2.26",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "postcss": "^8",
