--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "firebase": "^11.6.1",
     "next": "14.2.26",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "postcss": "^8",
